--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -1,5 +1,5 @@
 <div data-role="header">
-  <h1>Consultar salidas de alumnos con personas vinculadas</h1>
+  <h1>Consultar salidas de alumnos</h1>
 </div>
 
 <% if params[:seccion_id].nil? %>
@@ -21,8 +21,8 @@
 <div data-role="content">
   <%= form_tag(consulta_asistencia_path, {"onSubmit" => "return validarBusquedaXRangoFechas();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
     <div data-role="fieldcontain">
-      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required") %>
-      Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required") %>
+      Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required", :max => Date.current) %>
+      Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required", :max => Date.current) %>
       <li data-role="fieldcontain">
         Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
         <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
@@ -48,7 +48,7 @@
                 </p>
                 <% horaingver = "--:--" %>
                 <% horasalver = "--:--" %>
-                <% personaver = "" %>                
+                <% personaver = "" %>
             </li>
           <% end %>
           <% alumfproc = asistencia.anio_alumno_id.to_s+ asistencia.fecha_hora.strftime('%Y%m%d') %>
