--- a/app/views/cuaderno_controles_revisiones/index.html.erb
+++ b/app/views/cuaderno_controles_revisiones/index.html.erb
@@ -9,7 +9,7 @@
 <% if params[:accion].nil? || params[:accion] == "verificar" %>
   <% if params[:seccion_id].nil? %>
     <% seccion = "" %>
-    <% fecha = "" %>
+    <% fecha = Date.yesterday %>
     <% titulo = "" %>
   <% else %>
     <% seccion = params[:seccion_id] %>
@@ -29,7 +29,7 @@
     
     <%= form_tag(cuaderno_controles_revisiones_path, {:method => :get, "onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
       <div data-role="fieldcontain">
-        Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px") %><br />
+        Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px", :max => Date.yesterday) %><br />
         Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
         <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
       </div>
