--- a/app/views/alumnos/consultar_inasistencias_tardanzas.html.erb
+++ b/app/views/alumnos/consultar_inasistencias_tardanzas.html.erb
@@ -23,8 +23,8 @@
     <%= form_tag(consultar_inasistencias_tardanzas_path, {:method => :get, "data-ajax" => "false"}) do %>
       <div data-role="fieldcontain">
         <li data-role="fieldcontain">
-          Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required") %>
-          Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required") %>
+          Del: <%= text_field_tag(:fechaI, fechaI, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required", :min => @fecha_inicial, :max => Date.current) %>
+          Al: <%= text_field_tag(:fechaF, fechaF, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:135px", :required => "required", :min => @fecha_inicial, :max => Date.current) %>
         </li>
         <li data-role="fieldcontain">
           Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, {:prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :required => "required", :name => "seccion_id"}) %>
