--- a/app/views/permisos/_form.html.erb
+++ b/app/views/permisos/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="field">
     Acción (*)<br/>
-    <%= f.text_field :action, :required => "required", :pattern => "^[a-zA-ZñÑ]*$", :title => "Solo estan permitidos letras sin espacios" %>
+    <%= f.text_field :action, :required => "required", :title => "Solo estan permitidos letras sin espacios" %>
   </div>
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
