--- a/app/views/alumnos/_alumnos_personas_vinculadas_fields.html.erb
+++ b/app/views/alumnos/_alumnos_personas_vinculadas_fields.html.erb
@@ -10,8 +10,8 @@
         <% end %>
       </div>
       
-      <div id="div_agregar_persona">
-        <%= f.link_to_add "Agregar persona", :persona_vinculada, "data-role" => "button", "data-inline" => "true", "data-theme" => "b", "data-icon" => "plus", "data-mini" => "true" %>
+      <div id="div_agregar_persona" data-role="content" data-theme = "b">
+        <%= f.link_to_add "Crear persona", :persona_vinculada, "data-role" => "button", "data-inline" => "true", "data-theme" => "b", "data-icon" => "plus", "data-mini" => "true" %>
       </div>
       
       <div class="field">
@@ -46,6 +46,10 @@
         <div class="field">
           <%= f.check_box :revisa_control, "class" => "custom", "data-mini" => "true" %>
           <%= f.label :revisa_control, "Revisa cuaderno de control" %> 
+        </div>
+        <div class="field">
+          <%= f.check_box :notificar_salida, "class" => "custom", "data-mini" => "true" %>
+          <%= f.label :notificar_salida, "Notificar salida de alumno" %> 
         </div>
       </fieldset>
       <div class="field">
