--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -68,7 +68,7 @@
           <li><a href="<%= personas_vinculadas_path %>">Personas vinculadas</a></li>
         <% end %>
         
-        <% if [1,3].include? current_user.perfil_id %>
+        <% if [0].include? current_user.perfil_id #1,3 %>
           <li><a href="<%= vincularpersonas_path(:seccion_id => 0) %>">Vincular personas</a></li>
         <% end %>
 
@@ -91,7 +91,7 @@
       
       <% if [1,3].include? current_user.perfil_id %>
         <li data-role="list-divider" data-icon="false" data-mini="true">
-          Control de inasistencias y tardanzas
+          Inasistencias y tardanzas
         </li>
         
         <% if [1,3].include? current_user.perfil_id %>
@@ -128,28 +128,20 @@
         <li><a href="<%= cambiar_clave_path(:id => current_user.id) %>">Cambiar clave</a></li>
       <% end %>
       
-      <% if current_user.perfil_id == 1 %>
-        <li data-role="list-divider" data-icon="false" data-mini="true">
-          Seguridad del sistema
-        </li>
-        <li><a href="<%= permisos_path %>">Permisos</a></li>
-        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
-        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
-      <% end %>
-      
       <% if [1,5].include? current_user.perfil_id %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion Colegio
         </li>
+        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
+        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
+        <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
+        <li><a href="<%= grados_path %>">Grados y secciones</a></li>
+        <li><a href="<%= alumnos_path %>">Alumnos</a></li>
+        <!--li><a href="<%#= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li-->
         <li><a href="<%= cargar_alumnos_path %>">Cargar alumnos</a></li>
         <li><a href="<%= cargar_padres_path %>">Cargar padres</a></li>
         <li><a href="<%= cargar_vinculos_path %>">Cargar vínculos</a></li>
         <li><a href="<%= cargar_grados_secciones_path %>">Cargar grados y secciones</a></li>
-        <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
-        <li><a href="<%= grados_path %>">Grados y secciones</a></li>
-        <li><a href="<%= alumnos_path %>">Alumnos</a></li>
-        <li><a href="<%= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li>
       <% end %>
       
       <% if current_user.perfil_id == 1 %> 
@@ -160,6 +152,8 @@
         <li><a href="<%= colegios_path %>">Colegios</a></li>
         <li><a href="<%= cursos_path %>">Cursos</a></li>
         <li><a href="<%= tipos_notas_path %>">Tipos de nota</a></li>
+        <li><a href="<%= permisos_path %>">Permisos</a></li>
+        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
       <% end %>
     </ul>
     
