--- a/app/views/personas_vinculadas/show.html.erb
+++ b/app/views/personas_vinculadas/show.html.erb
@@ -13,8 +13,27 @@
     <b>Correo:</b> <%= @persona_vinculada.correo %><p>
 </div>
 
-<div data-role="footer">
-  <% if (can? :update, @persona_vinculada) %>
-    <%= link_to 'Editar', edit_persona_vinculada_path(@persona_vinculada), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
+<% if can? :create, AlumnoPersonaVinculada %>
+  <%= render "alumnos_personas_vinculadas/form2" %>
+<% end %>
+
+<div data-role="header">Alumnos vinculados</div>
+
+<div data-role="content">
+  <ul id='alumnos_personas_vinculadas' data-role="listview">
+  <% @persona_vinculada.alumnos_personas_vinculadas.each do |apv| %>
+    <% if !apv.alumno_id.nil? %> 
+      <% if can? :read, apv %>
+        <li>
+          <% if can? :read, apv %>
+            <%= link_to simple_format(apv.alumno.apellidos_nombres), [@persona_vinculada, apv] %> 
+          <% end %>
+          <% if can? :destroy, apv %>
+            <%= link_to 'Eliminar', apv, confirm: '¿Está seguro que desea eliminar el vínculo?', method: :delete, "data-icon" => "delete" %>
+          <% end %>
+        </li>
+      <% end %>
+    <% end %>
   <% end %>
+  </ul>
 </div>
