--- a/app/views/autorizaciones/autorizacion.html.erb
+++ b/app/views/autorizaciones/autorizacion.html.erb
@@ -49,9 +49,26 @@
               <% link_opcion = autorizacion %>
             <%end%>
             <%= link_to link_opcion do %>
-              <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
-              <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
-              <p class="ui-li-desc"> Autorizado: <% if autorizacion.respuesta.nil? %> Sin respuesta <%else%> <%if autorizacion.respuesta ==0%> No <%else%> Si <%end%> <%end%></p>
+              <h3 class= "ui-li-heading"> 
+                <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  
+              </h3>
+              <p class="ui-li-desc"> 
+                <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %>
+              </p>
+              <p class="ui-li-desc"> 
+                Autorizado: 
+                <% if autorizacion.respuesta.nil? %> 
+                  Sin respuesta 
+                <% else %> 
+                  <% if autorizacion.respuesta == 0 %> 
+                    No 
+                  <% else %> 
+                    Si 
+                  <% end %> 
+                  <br/>
+                  <%= "Respondido por #{autorizacion.persona_vinculada.apellidos_nombres} el #{autorizacion.fecha_hora_autorizacion.strftime('%d/%m/%Y %H:%M:%S')}" %>
+                <% end %>
+              </p>
               <% if autorizacion.actividad.estado != 2 %>
                 <p class="ui-li-aside"><%= ListaValor.find_by_tabla_and_item(8, autorizacion.actividad.estado).descripcion %></p>
               <% end %>
@@ -74,7 +91,20 @@
             <%= link_to autorizacion do %>
               <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
               <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
-              <p class="ui-li-desc"> Autorizado: <% if autorizacion.respuesta.nil? %> Sin respuesta <%else%> <%if autorizacion.respuesta ==0%> No <%else%> Si <%end%> <%end%></p>
+              <p class="ui-li-desc"> 
+                Autorizado: 
+                <% if autorizacion.respuesta.nil? %> 
+                  Sin respuesta 
+                <% else %> 
+                  <% if autorizacion.respuesta == 0 %> 
+                    No 
+                  <% else %> 
+                    Si 
+                  <% end %> 
+                  <br/>
+                  <%= "Respondido por #{autorizacion.persona_vinculada.apellidos_nombres} el #{autorizacion.fecha_hora_autorizacion.strftime('%d/%m/%Y %H:%M:%S')}" %>
+                <% end %>
+              </p>              
               <% if autorizacion.actividad.estado != 2 %>
                 <p class="ui-li-aside"><%= ListaValor.find_by_tabla_and_item(8, autorizacion.actividad.estado).descripcion %></p>
               <% end %>
