--- a/app/views/autorizaciones/index.html.erb
+++ b/app/views/autorizaciones/index.html.erb
@@ -22,7 +22,7 @@
   <%= form_tag(autorizaciones_path, {:method => :get, "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
       Actividad: <%= collection_select(:actividad, :id, @actividades, :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
-      Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, { :prompt => ':: Todas las secciones ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
   <% end %>
@@ -40,7 +40,11 @@
         <% @autorizaciones.autorizado.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+            <p class="ui-li-desc">
+              <%= "#{autorizacion.alumno.apellidos_nombres} - #{Alumno.find(autorizacion.alumno_id).grado_seccion(anio_escolar.id)}" %> 
+              <br />
+              <%= "Autorizado por #{autorizacion.persona_vinculada.apellidos_nombres} el #{autorizacion.fecha_hora_autorizacion.strftime('%d/%m/%Y %H:%M:%S')}" %>
+            </p>
             <% end %>
           </li>
         <% end  %>
@@ -58,7 +62,11 @@
         <% @autorizaciones.no_autorizado.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+              <p class="ui-li-desc"> 
+                <%= "#{autorizacion.alumno.apellidos_nombres} - #{Alumno.find(autorizacion.alumno_id).grado_seccion(anio_escolar.id)}" %> 
+                <br />
+              <%= "Respondido por #{autorizacion.persona_vinculada.apellidos_nombres} el #{autorizacion.fecha_hora_autorizacion.strftime('%d/%m/%Y %H:%M:%S')}" %>
+              </p>
             <% end %>
           </li>
         <% end  %>
@@ -76,7 +84,9 @@
         <% @autorizaciones.pendiente.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.alumno.apellidos_nombres}" %>"  >
             <%= link_to "#" do %>
-              <p class="ui-li-desc"> <%= "Seccion #{Seccion.find(AnioAlumno.find_by_anio_escolar_id_and_alumno_id(anio_escolar.id,autorizacion.alumno_id).seccion_id).grado_seccion} - #{autorizacion.alumno.apellidos_nombres}" %> </p>
+              <p class="ui-li-desc"> 
+                <%= "#{autorizacion.alumno.apellidos_nombres} - #{Alumno.find(autorizacion.alumno_id).grado_seccion(anio_escolar.id)}" %> 
+              </p>
             <% end %>
           </li>
         <% end  %>
