--- a/app/views/autorizaciones/edit.html.erb
+++ b/app/views/autorizaciones/edit.html.erb
@@ -1,5 +1,5 @@
 <div data-role="header">
-    <h1>Responder</h1>
+    <h1>Responder solicitud de autorización</h1>
     <%= link_to 'Regresar', autorizaciones_path(:accion => "autorizar", :usuario => current_user.usuario), "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
