--- a/app/views/cuadernos_controles/show.html.erb
+++ b/app/views/cuadernos_controles/show.html.erb
@@ -49,7 +49,7 @@
 
 <div data-role="footer">
   <% if (@cuaderno_control.estado == 1) && (can? :cerrar, @cuaderno_control) %>
-    <%= link_to 'Cerrar', "/cierre_cuadernos_controles/#{@cuaderno_control.id}", "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+    <%= button_to 'Cerrar', { :action => "cerrar", :id => @cuaderno_control.id }, "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true", data: { confirm: "¿Está seguro que desea cerrar el cuaderno de control?" } %>
   <% else %>
     <%= ListaValor.find_by_tabla_and_item(5, @cuaderno_control.estado).descripcion %>
   <% end %>
