--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>::. Micole.pe .::</title>
-  <!--%= stylesheet_link_tag    "application", :media => "all" %-->
   
   <%= javascript_include_tag "application" %>
   
@@ -10,6 +9,7 @@
   
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
   <link rel="stylesheet"  href="http://jquerymobile.com/test/css/themes/default/jquery.mobile.css" />
+  <%#= stylesheet_link_tag "application", :media => "all" %>
   <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
   
