--- a/app/views/personas_vinculadas/_form.html.erb
+++ b/app/views/personas_vinculadas/_form.html.erb
@@ -21,15 +21,15 @@
     </div>
     <div class="field">
       Nombres (*)<br />
-      <%= f.text_field :nombres, :required => "required", :pattern => "^[a-zA-ZñÑ ]*$", :title => "Solo estan permitidos letras" %>
+      <%= f.text_field :nombres, :required => "required", :pattern => "^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s\W]*$", :title => "Solo estan permitidos letras" %>
     </div>
     <div class="field">
       Apellido paterno (*)<br />
-      <%= f.text_field :apellido_paterno, :required => "required", :pattern => "^[a-zA-ZñÑ ]*$", :title => "Solo estan permitidos letras" %>
+      <%= f.text_field :apellido_paterno, :required => "required", :pattern => "^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s\W]*$", :title => "Solo estan permitidos letras" %>
     </div>
     <div class="field">
-      Apellido materno (*)<br />
-      <%= f.text_field :apellido_materno, :required => "required", :pattern => "^[a-zA-ZñÑ ]*$", :title => "Solo estan permitidos letras" %>
+      Apellido materno<br />
+      <%= f.text_field :apellido_materno, :pattern => "^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s\W]*$", :title => "Solo estan permitidos letras" %>
     </div>
     <div class="field">
       Telefono fijo<br />
@@ -40,8 +40,8 @@
       <%= f.telephone_field :telefono_movil, :placeholder => "999999999", :pattern => "9\\d{8}" %>
     </div>
     <div class="field">
-      <%= f.label :correo %><br />
-      <%= f.email_field :correo, :placeholder => "dirceu@example.com" %>
+      Correo (*)<br />
+      <%= f.email_field :correo, :required => "required", :placeholder => "dirceu@example.com" %>
     </div>
     <div class="field">
       Foto<br />
