--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -12,26 +12,26 @@
 
       <% if [1,2,3,4,5].include? current_user.perfil_id %>
         <% if [1,5].include? current_user.perfil_id %>
-          <li><a href="<%= tipos_eventos_path %>">Configurar</a></li>
+          <li><a href="<%= tipos_eventos_path %>" data-ajax = "false">Configurar</a></li>
         <% end %>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= cuadernos_controles_path %>">Registrar</a></li>
+          <li><a href="<%= cuadernos_controles_path %>" data-ajax = "false">Registrar</a></li>
         <% end %>
         
         <% if [1,2,4].include? current_user.perfil_id %>
           <li>
-            <a href="<%= cuaderno_controles_revisiones_path(:accion => :revisar, :usuario => current_user.usuario) %>">
+            <a href="<%= cuaderno_controles_revisiones_path(:accion => :revisar, :usuario => current_user.usuario) %>" data-ajax = "false">
               Revisar
             </a>
           </li>
         <% end %>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= cuaderno_controles_revisiones_path(:accion => :verificar) %>">Verificar</a></li>
+          <li><a href="<%= cuaderno_controles_revisiones_path(:accion => :verificar) %>" data-ajax = "false">Verificar</a></li>
         <% end %>
         <% if [1,2,3,4].include? current_user.perfil_id %>
-          <li><a href="<%= cuaderno_controles_eventos_path %>">Consultar eventos programados</a></li>
+          <li><a href="<%= cuaderno_controles_eventos_path %>" data-ajax = "false">Consultar eventos programados</a></li>
         <% end %>
       <% end %>
 
@@ -42,19 +42,19 @@
         </li>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= actividades_path %>">Registrar</a></li>
+          <li><a href="<%= actividades_path %>" data-ajax = "false">Registrar</a></li>
         <% end %>
         
         <% if [1,2].include? current_user.perfil_id %>
-          <li><a href="<%= autorizaciones_path(:accion => :autorizar, :usuario => current_user.usuario) %>" >Autorizar</a></li>          
+          <li><a href="<%= autorizaciones_path(:accion => :autorizar, :usuario => current_user.usuario) %>" data-ajax = "false">Autorizar</a></li>          
         <% end %>
 
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= autorizaciones_path(:accion => :consultar) %>" >Consultar autorizaciones</a></li>
+          <li><a href="<%= autorizaciones_path(:accion => :consultar) %>" data-ajax = "false">Consultar autorizaciones</a></li>
         <% end %>
 
         <% if [1,2,3,4].include? current_user.perfil_id %>
-          <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>">Calendario</a></li>
+          <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>" data-ajax = "false">Calendario</a></li>
         <% end %>
       <% end %>
 
@@ -65,27 +65,27 @@
         </li>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= personas_vinculadas_path %>">Personas vinculadas</a></li>
+          <li><a href="<%= personas_vinculadas_path %>" data-ajax = "false">Personas vinculadas</a></li>
         <% end %>
         
         <% if [0].include? current_user.perfil_id #1,3 %>
-          <li><a href="<%= vincularpersonas_path(:seccion_id => 0) %>">Vincular personas</a></li>
+          <li><a href="<%= vincularpersonas_path(:seccion_id => 0) %>" data-ajax = "false">Vincular personas</a></li>
         <% end %>
 
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= salida_path %>">Salida de alumnos</a></li>
+          <li><a href="<%= salida_path %>" data-ajax = "false">Salida de alumnos</a></li>
         <% end %>
 
         <% if [0].include? current_user.perfil_id %>   <!--% Opcion deshabilitada %-->
-          <li><a href="<%= new_asistencia_path %>">Registrar asistencia de alumnos</a></li>
+          <li><a href="<%= new_asistencia_path %>" data-ajax = "false">Registrar asistencia de alumnos</a></li>
         <% end %>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= consulta_asistencia_path %>">Consultar salida</a></li>
+          <li><a href="<%= consulta_asistencia_path %>" data-ajax = "false">Consultar salida</a></li>
         <% end %>
         
         <% if [0].include? current_user.perfil_id %>  <!--% Opcion deshabilitada %-->
-          <li><a href="<%= consulta_asistencia_alumno_path %>">Consultar asistencias del alumno</a></li>
+          <li><a href="<%= consulta_asistencia_alumno_path %>" data-ajax = "false">Consultar asistencias del alumno</a></li>
         <% end %>
       <% end %>
       
@@ -95,15 +95,15 @@
         </li>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= tardanzas_path %>">Registrar tardanzas</a></li>
+          <li><a href="<%= tardanzas_path %>" data-ajax = "false">Registrar tardanzas</a></li>
         <% end %>
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= inasistencias_path %>">Registrar inasistencias</a></li>
+          <li><a href="<%= inasistencias_path %>" data-ajax = "false">Registrar inasistencias</a></li>
         <% end %>  
         
         <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= consultar_inasistencias_tardanzas_path %>">Consultar inasistencias y tardanzas</a></li>
+          <li><a href="<%= consultar_inasistencias_tardanzas_path %>" data-ajax = "false">Consultar inasistencias y tardanzas</a></li>
         <% end %>
       <%end%>
       
@@ -113,11 +113,11 @@
           Notas
         </li>
         <% if [1,3,5].include? current_user.perfil_id %>
-          <li><a href="<%= cargar_notas_path %>">Cargar</a></li>
+          <li><a href="<%= cargar_notas_path %>" data-ajax = "false">Cargar</a></li>
         <% end %>
         
         <% if [1,2,4].include? current_user.perfil_id %>
-          <li><a href="<%= notas_path %>">Consultar</a></li>
+          <li><a href="<%= notas_path %>" data-ajax = "false">Consultar</a></li>
         <% end %>
       <% end %>
        
@@ -125,35 +125,35 @@
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Mi cuenta
         </li>
-        <li><a href="<%= cambiar_clave_path(:id => current_user.id) %>">Cambiar clave</a></li>
+        <li><a href="<%= cambiar_clave_path(:id => current_user.id) %>" data-ajax = "false">Cambiar clave</a></li>
       <% end %>
       
       <% if [1,5].include? current_user.perfil_id %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion Colegio
         </li>
-        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
-        <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
-        <li><a href="<%= grados_path %>">Grados y secciones</a></li>
-        <li><a href="<%= alumnos_path %>">Alumnos</a></li>
-        <!--li><a href="<%#= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li-->
-        <li><a href="<%= cargar_alumnos_path %>">Cargar alumnos</a></li>
-        <li><a href="<%= cargar_padres_path %>">Cargar padres</a></li>
-        <li><a href="<%= cargar_vinculos_path %>">Cargar vínculos</a></li>
-        <li><a href="<%= cargar_grados_secciones_path %>">Cargar grados y secciones</a></li>
+        <li><a href="<%= usuarios_path %>" data-ajax = "false">Usuarios</a></li>
+        <li><a href="<%= crearusuarios_path %>" data-ajax = "false">Creacion masiva de usuarios</a></li>
+        <li><a href="<%= anios_escolares_path %>" data-ajax = "false">Años escolares</a></li>
+        <li><a href="<%= grados_path %>" data-ajax = "false">Grados y secciones</a></li>
+        <li><a href="<%= alumnos_path %>" data-ajax = "false">Alumnos</a></li>
+        <!--li><a href="<%#= anios_alumnos_path(:seccion_id => 0) %>" data-ajax = "false">Asignar alumnos a secciones</a></li-->
+        <li><a href="<%= cargar_alumnos_path %>" data-ajax = "false">Cargar alumnos</a></li>
+        <li><a href="<%= cargar_padres_path %>" data-ajax = "false">Cargar padres</a></li>
+        <li><a href="<%= cargar_vinculos_path %>" data-ajax = "false">Cargar vínculos</a></li>
+        <li><a href="<%= cargar_grados_secciones_path %>" data-ajax = "false">Cargar grados y secciones</a></li>
       <% end %>
       
       <% if current_user.perfil_id == 1 %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion MiCole
         </li>
-        <li><a href="<%= listas_valores_path %>">Variables del sistema</a></li>
-        <li><a href="<%= colegios_path %>">Colegios</a></li>
-        <li><a href="<%= cursos_path %>">Cursos</a></li>
-        <li><a href="<%= tipos_notas_path %>">Tipos de nota</a></li>
-        <li><a href="<%= permisos_path %>">Permisos</a></li>
-        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
+        <li><a href="<%= listas_valores_path %>" data-ajax = "false">Variables del sistema</a></li>
+        <li><a href="<%= colegios_path %>" data-ajax = "false">Colegios</a></li>
+        <li><a href="<%= cursos_path %>" data-ajax = "false">Cursos</a></li>
+        <li><a href="<%= tipos_notas_path %>" data-ajax = "false">Tipos de nota</a></li>
+        <li><a href="<%= permisos_path %>" data-ajax = "false">Permisos</a></li>
+        <li><a href="<%= perfiles_path %>" data-ajax = "false">Perfiles</a></li>
       <% end %>
     </ul>
     
