--- a/app/views/inasistencia_mailer/notificacion_inasistencia.text.erb
+++ b/app/views/inasistencia_mailer/notificacion_inasistencia.text.erb
@@ -1,6 +1,6 @@
 Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:
 
-Se le informa que hoy, a las <%= @horanotificacion %> su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.
+Se le informa que hoy, a las <%= @horanotificacion %>, su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.
 
 Para cualquier consulta adicional, por favor, comuníquese con el profesor o con personal administrativo del colegio.
 
