--- a/app/views/actividades/index.html.erb
+++ b/app/views/actividades/index.html.erb
@@ -18,11 +18,12 @@
     <div data-role="collapsible" data-collapsed="false">
       <h2>Pendientes</h2>
       <ul data-role="listview" data-filter="true">
-        <% @actividades.pendiente(Time.now).order("fecha_hora_inicio").each do |actividad| %>    
-          <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre}" %>" >
+        <% @actividades.pendiente(Time.now).order("fecha_hora_inicio").each do |actividad| %>
+          <% estadoactividad = ListaValor.find_by_tabla_and_item(8, actividad.estado).descripcion %>
+          <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre} #{estadoactividad}" %>" >
             <%= link_to actividad do %>  
               <strong><%= simple_format("#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}") %></strong>
-              <p class="ui-li-aside"><%= ListaValor.find_by_tabla_and_item(8, actividad.estado).descripcion %></p>
+              <p class="ui-li-aside"><%= estadoactividad %></p>
               <% if (can? :update, actividad) %>
                 <%= link_to 'Editar', edit_actividad_path(actividad), "data-inline" => "true", "data-role" => "button", "data-mini" => "true" %>
               <% end %>
@@ -39,9 +40,13 @@
     <div data-role="collapsible">
       <h2>Realizadas</h2>
       <ul data-role="listview" data-filter="true">
-        <% @actividades.realizada(Time.now).order("fecha_hora_inicio DESC").each do |actividad| %>    
-          <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre}" %>" >
-            <%= link_to simple_format("#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}"), actividad %>                            
+        <% @actividades.realizada(Time.now).order("fecha_hora_inicio DESC").each do |actividad| %>
+          <% estadoactividad = ListaValor.find_by_tabla_and_item(8, actividad.estado).descripcion %>
+          <li data-filtertext="<%= "#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} #{TipoEvento.find(actividad.tipo_evento_id).descripcion} #{actividad.nombre} #{estadoactividad}" %>" >
+            <%= link_to actividad do %>  
+              <strong><%= simple_format("#{actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{TipoEvento.find(actividad.tipo_evento_id).descripcion} -  #{actividad.nombre}") %></strong>
+              <p class="ui-li-aside"> <%= estadoactividad %> </p>
+            <% end %>
           </li>
         <% end  %>
       </ul>
