--- a/app/views/inasistencia_mailer/notificacion_inasistencia.html.erb
+++ b/app/views/inasistencia_mailer/notificacion_inasistencia.html.erb
@@ -1,5 +1,5 @@
 <p>Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:</p>
-<p>Se le informa que hoy, a las <%= @horanotificacion %>, su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.</p>
+<p>Se le informa a las <%= @horanotificacion %>, que su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.</p>
 <p>
   Para cualquier consulta adicional, por favor, comuníquese con el profesor o con personal administrativo del colegio.
 </p>
