--- a/app/views/autorizaciones/asistencias_actividades.html.erb
+++ b/app/views/autorizaciones/asistencias_actividades.html.erb
@@ -11,10 +11,10 @@
 <% end %>
 
 <% if current_user.perfil_id == 3 && current_user.alcance_colegio == 0%>
-  <% @actividades = Actividad.por_secciones_usuario(anio_escolar.id, current_user.id).where("requiere_autorizacion = 1 and estado = 2 and to_char(fecha_hora_inicio::timestamp at time zone 'UTC-5', 'yyyymmdd') = ?", Date.current.strftime('%Y%m%d')).order("fecha_hora_inicio DESC") %>
+  <% @actividades = Actividad.por_secciones_usuario(anio_escolar.id, current_user.id).where("requiere_autorizacion = 1 and estado = 2 and to_char(fecha_hora_inicio::timestamp at time zone 'UTC-5', 'yyyymmdd') <= ?", Date.current.strftime('%Y%m%d')).order("fecha_hora_inicio DESC") %>
   <% @secciones   = Seccion.por_anioescolar_usuario(anio_escolar.id, current_user.id).order('grados.nivel','grados.grado','seccion') %>
 <% else %>
-  <% @actividades = Actividad.por_anio_escolar(anio_escolar.id).where("requiere_autorizacion = 1 and estado = 2 and to_char(fecha_hora_inicio::timestamp at time zone 'UTC-5', 'yyyymmdd') = ?", Date.current.strftime('%Y%m%d')).order("fecha_hora_inicio DESC") %>
+  <% @actividades = Actividad.por_anio_escolar(anio_escolar.id).where("requiere_autorizacion = 1 and estado = 2 and to_char(fecha_hora_inicio::timestamp at time zone 'UTC-5', 'yyyymmdd') <= ?", Date.current.strftime('%Y%m%d')).order("fecha_hora_inicio DESC") %>
   <% @secciones   = Seccion.por_anioescolar(anio_escolar.id).order('grados.nivel','grados.grado','seccion') %>
 <% end %>
 
